# openglrays

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json
src/: arena.cpp  arena.h  main.cpp
src/shaders/: trifragment.frag.glsl  trivertex.vert.glsl
src/util/: logger.cpp
